[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.3.1", features = ["full"] }
tokio = { version = "1.37.0", features = ["full"] }
http-body-util = "0.1.1"
hyper-util = { version = "0.1.3", features = ["full"] }
regex = "1.10.4"
once_cell = "1.19.0"
serde_json = "1.0.116"
http = "1.1.0"
hyper-server = "0.6.0"
axum = "0.6.20"
tower-http = { version = "0.4", features = ["fs"] }